[package]
name = "hooke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="hooke"
path="src/lib.rs"

[dependencies]
rust-stemmers="*"
stop-words="*"
regex="*"
search_with_google="*"
websearch={git="https://github.com/hhhhhhhhhn/websearch"}
tokio={version="*", features=["macros"]}
reqwest="*"
futures-util="*"
